--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Do not share your OpenAI API key with anyone! It should remain a secret.
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
